# flux

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml  etl-refresh.yml  release.yml
docs/: demo-script.md  post.md
docs/screenshots/: make-placeholders.py
etl/: README.md  build.py  eu_ets_seed.csv  pyproject.toml
etl/tests/: test_build.py
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
web/data/: eu_ets.csv  flux.sqlite  meta.json
web/e2e/: landing.spec.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/api/ask/: route.ts
web/src/app/chat/: page.tsx
web/src/components/brand/: logo.tsx
web/src/components/chat/: chart-view.tsx  conversation.tsx
web/src/components/landing/: chat-input.tsx  feature-grid.tsx  footer.tsx  grid-background.tsx  nav.tsx
web/src/components/ui/: button.test.tsx  button.tsx  input.tsx
web/src/lib/: data.ts  db.ts  demo.ts  policy.test.ts  policy.ts  sse-client.ts  sse.test.ts  sse.ts  tools.ts  types.ts
