[project]
name = "flux-etl"
version = "0.1.0"
description = "Flux data prep: EMBER yearly electricity + EU ETS sector emissions into a small SQLite + CSV that the Next.js app reads at runtime."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
flux-etl = "build:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["build.py"]
